src/objects/Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Add_Info_Numeric__c</fullName>
        <formula>if(ISNUMBER(Add_Info__c), 
   value(Add_Info__c),
   if(ISNUMBER(left(Add_Info__c, 4)), value(left(Add_Info__c,4)),
      if(ISNUMBER(left(Add_Info__c, 3)), value(left(Add_Info__c,3)),
         if(ISNUMBER(left(Add_Info__c, 2)), value(left(Add_Info__c,2)),
            if(ISNUMBER(left(Add_Info__c, 1)), value(left(Add_Info__c,1)),0)
         )
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add_Info_Numeric</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_Info__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Email__c</fullName>
        <label>Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_First_Name__c</fullName>
        <label>Alt First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Last_Name__c</fullName>
        <label>Alt Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Middle_Name__c</fullName>
        <label>Alt Middle Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Person_Type__c</fullName>
        <description>If the Survey Response is entered for someone not in Salesforce, the Organizer should indicate whether this person is a Member or someone else who is a non-member.</description>
        <label>Alt Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Allies</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Friend/Family of Member</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Non-Member in Facility</fullName>
                </value>
                <value>
                    <fullName>NYU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Phone_2__c</fullName>
        <label>Alt Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alt_Related_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This alternative Contact is related to this Member.</description>
        <label>Alt Related Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses (Alt Related Member)</relationshipLabel>
        <relationshipName>Survey_Responses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_Source__c</fullName>
        <label>Alt Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <description>To track attended count;Use in canned reports;Do Not Delete by MD;</description>
        <formula>IF( Response_Value__c =&quot;A. Attended&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_Count__c</fullName>
        <formula>If (OR(ISNULL(Contact__c), ISBLANK(Contact__c)),  Alt_Employer__r.BU_Count__c,  Contact__r.Account.BU_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPE_Baseline_Pledge__c</fullName>
        <formula>Contact__r.COPE_Baseline_Pledge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPE Baseline Pledge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Pledge__c</fullName>
        <formula>Contact__r.COPE_Pledge__c</formula>
        <label>COPE Pledge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Value_Add__c</fullName>
        <description>Special COPE field for the 2016 COPE Ninja Blitz</description>
        <formula>if(Survey_Code__c = &apos;PKM&apos;, 
   if ( left(Response_Value__c, 1) = &apos;A&apos;, 25.0 - COPE_Baseline_Pledge__c, 
     if ( left(Response_Value__c, 1) = &apos;B&apos;, 20.0 -  COPE_Baseline_Pledge__c, 
       if ( left(Response_Value__c, 1) = &apos;C&apos;, 15.0 -  COPE_Baseline_Pledge__c, 
         if ( left(Response_Value__c, 1) = &apos;D&apos;, 10.0 -  COPE_Baseline_Pledge__c, 
           if ( left(Response_Value__c, 1) = &apos;E&apos;, 5.0 -  COPE_Baseline_Pledge__c, 0)
         )
       )
     )
   ),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPE Value Add</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <formula>IF( Response_Value__c =&quot;N. Cancelled&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cnt__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collected_By_CS__c</fullName>
        <formula>Collected_By__r.Contract_Specialist__c</formula>
        <label>Collected By CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collected_By_Contact_Id__c</fullName>
        <formula>Collected_By__r.Salesforce_Contact_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collected By Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_By_Employer_Name__c</fullName>
        <formula>if (isblank( Collected_By__c ),  Employer_Name__c,  Collected_By__r.Account.Name )</formula>
        <label>Collected By Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_By_FID__c</fullName>
        <formula>Collected_By__r.FID__c</formula>
        <label>Collected By FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_By_Is_EBoard__c</fullName>
        <formula>Collected_By__r.EBoard__c</formula>
        <label>Collected By Is EBoard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collected_By_Ldr_Promotion_Status__c</fullName>
        <formula>TEXT(Collected_By__r.Stretch_Ldr_Promotion_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collected By Ldr Promotion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_By_Name__c</fullName>
        <formula>if(or(isnull(Collected_By__r.MiddleName), isblank(Collected_By__r.MiddleName)), 
Collected_By__r.LastName &amp; &quot;, &quot; &amp; Collected_By__r.FirstName, 
Collected_By__r.LastName &amp; &quot;, &quot; &amp; Collected_By__r.FirstName &amp; &quot; &quot; &amp; Collected_By__r.MiddleName 
)</formula>
        <label>Collected By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who collected this survey response?</description>
        <label>Collected By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses (Collected By)</relationshipLabel>
        <relationshipName>Survey_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collected_Datetime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Collected Datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <description>To track the committed count;Use in canned reports;Do Not Delete by MD;</description>
        <formula>IF( Response_Value__c =&quot;M. Committed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <description>To track confirmed count;Use in canned reports;Do Not Delete by MD;</description>
        <formula>IF( Response_Value__c =&quot;B. Confirmed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>if (or(isnull(Contact__c),isblank(Contact__c)),
      if(or(isnull(Alt_Middle_Name__c), isblank(Alt_Middle_Name__c)),
         Alt_Last_Name__c &amp; &quot;, &quot; &amp;  Alt_First_Name__c,
         Alt_Last_Name__c &amp; &quot;, &quot; &amp;  Alt_First_Name__c &amp; &quot; &quot; &amp;  Alt_Middle_Name__c
      ),
      if(or(isnull(Contact__r.MiddleName), isblank(Contact__r.MiddleName)),
         Contact__r.LastName &amp; &quot;, &quot; &amp;  Contact__r.FirstName, 
         Contact__r.LastName &amp; &quot;, &quot; &amp; Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.MiddleName
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Survey Response</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinator_Original__c</fullName>
        <description>Coordinator at time this Survey was first entered. Populated by Trigger.</description>
        <label>Original Coordinator</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>if (isblank(Contact__c),
 Alt_Employer__r.Coordinator__r.FirstName &amp; &apos; &apos;&amp;  Alt_Employer__r.Coordinator__r.LastName,
Contact__r.Account.Coordinator__r.FirstName &amp; &apos; &apos;&amp;  Contact__r.Account.Coordinator__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered_Attends__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c =TRUE  &amp;&amp; Response_Value__c =&quot;A. Attended&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covered Attends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_Commits__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c =TRUE  &amp;&amp; Response_Value__c =&quot;M. Committed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covered Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_Confirmed__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c =TRUE  &amp;&amp; Response_Value__c =&quot;B. Confirmed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covered Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_Reminded__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c =TRUE  &amp;&amp; Response_Value__c =&quot;D. Reminded&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covered Reminded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Entry_Page__c</fullName>
        <formula>HYPERLINK(&quot;/apex/&quot; &amp;  Survey_Question__r.Custom_Entry_Page__c &amp; &quot;?cid=&quot; &amp;  CASESAFEID(Contact__c) ,  Contact_Name__c)</formula>
        <label>Custom Entry Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Email__c</fullName>
        <formula>Contact__r.Cvent_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>if (isblank(Contact__c), &quot;Unknown&quot;, Contact__r.Department)</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>if (CONTAINS(Employer_Name__c, &quot;KAISER&quot;), &quot;Kaiser&quot;,
If (CONTAINS(Employer_Name__c, &quot;SEIU-UHW&quot;), &quot;Staff&quot;,
  if (OR(CONTAINS(Employer_Name__c, &quot;IHSS&quot;), CONTAINS(Employer_Name__c, &quot;AGING&quot;)), &quot;Home Care&quot;,
    if (or(isnull(Contact__c), isblank(Contact__c)), 
        Text(Alt_Employer__r.Account_Group__c),
        TEXT(Contact__r.Account.Account_Group__c)  
    )
  )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBoard__c</fullName>
        <formula>Contact__r.EBoard__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBoard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>if (isblank(Contact__c),  Alt_Email__c, Contact__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Id__c</fullName>
        <formula>if(isblank(Contact__c),  Alt_Employer__r.Employer_ID__c,  Contact__r.Account.Employer_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>if (or(isnull(Contact__c), isblank(Contact__c)),  Alt_Employer__r.Name,  Contact__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <formula>Contact__r.FID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF(or(isnull(Contact__c),isblank(Contact__c)), Alt_First_Name__c &amp; &quot; &quot; &amp;  Alt_Last_Name__c, Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getfeedback_API_ID__c</fullName>
        <label>Getfeedback API ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getfeedback_Response_Link__c</fullName>
        <label>Getfeedback Response Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hospital_System__c</fullName>
        <formula>IF (OR(ISNULL(Contact__c), ISBLANK(Contact__c)),  Alt_Employer__r.Hospital_System__c,  Contact__r.Account.Hospital_System__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hospital System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_ed_Department__c</fullName>
        <formula>if(isblank(Contact__r.Tier_Staff__c), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID-ed Department</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>Contact__r.Probable_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ldr_Assm__c</fullName>
        <formula>IF(OR(ISBLANK(Contact__c), ISBLANK( Survey_Question__r.Ldr_Assm_Vals__c)),
  FALSE,
  IF( FIND(UPPER(LEFT(Response_Value__c, 1)), UPPER(Survey_Question__r.Ldr_Assm_Vals__c)) &gt; 0, 
    if(isblank( Survey_Question__r.Ldr_Assm_Add_Info_Min__c ), TRUE, 
      if(  Add_Info_Numeric__c &gt;= Survey_Question__r.Ldr_Assm_Add_Info_Min__c , TRUE, FALSE)
    ),
    FALSE)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leadership Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailingCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailingPostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1_Original__c</fullName>
        <description>Organizer 1 at time this Survey was first entered. Populated by Trigger.</description>
        <label>Original Organizer 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1__c</fullName>
        <formula>if (isblank(Contact__c),
 Alt_Employer__r.Organizer_1__r.FirstName  &amp; &apos; &apos; &amp;   Alt_Employer__r.Organizer_1__r.LastName, 
Contact__r.Account.Organizer_1__r.FirstName &amp; &apos; &apos; &amp;  Contact__r.Account.Organizer_1__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_2__c</fullName>
        <formula>IF(ISBLANK(Contact__c),
 Alt_Employer__r.Organizer_2__r.FirstName  &amp; &apos; &apos; &amp;   Alt_Employer__r.Organizer_2__r.LastName, 
Contact__r.Account.Organizer_2__r.FirstName &amp; &apos; &apos; &amp;  Contact__r.Account.Organizer_2__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7_Did_Something__c</fullName>
        <formula>IF( CONTAINS(&quot;NH1:EN2:EN3:EN5:PC1:PC2:PR1:PR3:PS1:PS3:P10:P11:P13:TN1:TN3:V02:V04&quot;  , Survey_Code__c) , TRUE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P7 Did Something</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Cell__c</fullName>
        <formula>if(isblank(Contact__c), if(isblank(Alt_Phone_2__c), &quot;&quot;,  Alt_Phone_2__c), Contact__r.MobilePhone)</formula>
        <label>Phone - Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Home__c</fullName>
        <formula>if(isblank(Contact__c),  Alt_Phone__c , if(isblank( Contact__r.HomePhone), if(isblank( Contact__r.Phone), &quot;&quot;, Contact__r.Phone), Contact__r.HomePhone))</formula>
        <label>Phone - Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Responses__c</fullName>
        <description>Previous response values and dates.</description>
        <label>Previous Responses</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Name__c</fullName>
        <formula>Survey_Question__r.Name</formula>
        <label>Question Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_S_Ldr__c</fullName>
        <formula>Contact__r.Stretch_Leader__r.FirstName &amp; &apos; &apos; &amp; Contact__r.Stretch_Leader__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;S Ldr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconfirmed__c</fullName>
        <description>Use in canned reports;Do Not Delete by MD;</description>
        <formula>IF( Response_Value__c =&quot;R. Reconfirmed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reconfirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>if (or(isnull(Contact__c), isblank(Contact__c)), 
  Text(Alt_Employer__r.Region__c), 
  TEXT(Contact__r.Account.Region__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <formula>IF (ISBLANK(Contact__c),
  Alt_Employer__r.Regional_Director__r.FirstName &amp; &apos; &apos; &amp;   Alt_Employer__r.Regional_Director__r.LastName, 
 Contact__r.Account.Regional_Director__r.FirstName &amp; &apos; &apos; &amp;  Contact__r.Account.Regional_Director__r.LastName
)</formula>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminded__c</fullName>
        <description>To track reminded count;Use in canned reports;Do Not Delete by MD;</description>
        <formula>IF( OR(Response_Value__c =&quot;D. Reminded&quot;,Response_Value__c =&quot;D. Remind&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Group__c</fullName>
        <description>This field allows arbitrary groups to be uploaded for Reporting purposes.</description>
        <label>Report Group</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Value_Numeric__c</fullName>
        <description>Converts numeric text value to a numeric type.</description>
        <formula>IF (ISNUMBER(Response_Value__c),VALUE(Response_Value__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Value Numeric</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Value__c</fullName>
        <label>Response Value</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Text__c</fullName>
        <label>Source Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Code__c</fullName>
        <formula>Survey_Question__r.Survey_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_How_Old__c</fullName>
        <description>How old is this Survey in days?</description>
        <formula>(NOW() -  Collected_Datetime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey How Old?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Survey Question</description>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IF (OR(ISNULL(Contact__c),ISBLANK(Contact__c)),&quot;&quot;, Contact__r.Title )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turf_Key__c</fullName>
        <formula>Division__c &amp; &quot; / &quot; &amp;  Regional_Director__c &amp; &quot; / &quot; &amp; Coordinator__c &amp; &quot; / &quot; &amp;  Organizer_1__c &amp; &quot; / &quot; &amp; if(isblank( Collected_By_Employer_Name__c ),  Employer_Name__c , Collected_By_Employer_Name__c )</formula>
        <label>Turf Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHW_Campaign_Name__c</fullName>
        <formula>Survey_Question__r.UHW_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UHW Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uncovered_Attends__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c =FALSE &amp;&amp; Response_Value__c =&quot;A. Attended&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncovered Attends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uncovered_Commits__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c = FALSE  &amp;&amp; Response_Value__c =&quot;M. Committed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncovered Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uncovered_Confirmed__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c = FALSE  &amp;&amp; Response_Value__c =&quot;B. Confirmed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncovered Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uncovered_Reminded__c</fullName>
        <formula>IF( Contact__r.X80_Covered__c = FALSE  &amp;&amp; Response_Value__c =&quot;D. Reminded&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncovered Reminded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>no__c</fullName>
        <formula>IF( Response_Value__c =&quot;no&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>no</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>unassessed__c</fullName>
        <formula>IF( Response_Value__c =&quot;unassessed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>unassessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yes__c</fullName>
        <formula>IF( Response_Value__c =&quot;yes&quot;  || Response_Value__c =&quot;Yes&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>yes</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Question_Name__c</columns>
        <columns>Response_Value__c</columns>
        <columns>Add_Info__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Since_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>UHW_Campaign_Name__c</columns>
        <columns>Survey_Question__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Response_Value__c</columns>
        <columns>Add_Info_Numeric__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>All Since Yesterday</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>June_2nd_All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Alt_Person_Type__c</columns>
        <columns>Question_Name__c</columns>
        <columns>Response_Value__c</columns>
        <columns>Collected_Datetime__c</columns>
        <columns>Collected_By_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UHW_Campaign_Name__c</field>
            <operation>contains</operation>
            <value>june 2</value>
        </filters>
        <filters>
            <field>Question_Name__c</field>
            <operation>startsWith</operation>
            <value>Attend</value>
        </filters>
        <label>June 2nd All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>June_2nd_HC</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Alt_Person_Type__c</columns>
        <columns>Question_Name__c</columns>
        <columns>Response_Value__c</columns>
        <columns>Collected_Datetime__c</columns>
        <columns>Collected_By_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UHW_Campaign_Name__c</field>
            <operation>contains</operation>
            <value>june 2</value>
        </filters>
        <filters>
            <field>Question_Name__c</field>
            <operation>startsWith</operation>
            <value>Attend</value>
        </filters>
        <filters>
            <field>Alt_Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>June 2nd - HC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>May23rd</fullName>
        <columns>NAME</columns>
        <columns>Response_Value__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Question_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Code__c</field>
            <operation>equals</operation>
            <value>DA1</value>
        </filters>
        <label>May23rd</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ldr15</fullName>
        <columns>NAME</columns>
        <columns>Response_Value__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Question_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Code__c</field>
            <operation>equals</operation>
            <value>lr1</value>
        </filters>
        <label>ldr assymbly 2015</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R{00000000}</displayFormat>
        <label>Survey Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>